syntax="proto3";

message User {
    string username = 1;
    string email = 2;
    string profilePic = 3;
    string accessToken = 4;
    string password = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginResponse {
    User user = 1;
}

service AuthService {
    rpc login (LoginRequest) returns (LoginResponse);
}